# projet_NLP_ISSEA_DSM

./: .gitignore  README.md  essaie.py  integrate_stats.py  pyproject.toml  rapport_audit_semantique_LF_cameroun.tex
assets/: dashboard.css
data/raw/: README.md  ae_pb2024.json  ae_pb2025.json  loi_finances_1_articles_id_titre_chapitre_contenu.json  loi_finances_2_articles_id_titre_chapitre_contenu.json
notebooks/: analyse_outputs.ipynb  audit_semantique_avec_interpretations.ipynb  audit_semantique_cameroun_2024_2025.ipynb  test.ipynb
scripts/: generate_umap_coords.py  main_pipeline.py  run_dash.py
src/audit_semantique/: LICENSE  config.py  pyproject.toml
src/audit_semantique/audit/: semantic_audit.py
src/audit_semantique/clustering/: clusterer.py
src/audit_semantique/dashboard/: app_dash.py  stats_page.py
src/audit_semantique/modeling/: embeddings.py  zero_shot.py
src/audit_semantique/preprocessing/: data_loader.py  text_cleaner.py
src/audit_semantique/stats/: tests.py
src/audit_semantique_cameroun.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_audit.py  test_preprocessing.py  test_stats.py
